--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "nodemon": "^3.1.10",
+    "sequelize-auto-migrations": "^1.0.3",
     "sequelize-cli": "^6.6.3"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "express": "^5.1.0",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.0",
+    "redis": "^5.8.2",
     "sequelize": "^6.37.7"
   }
 }
