--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "sequelize-cli": "^6.6.3"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.15.0",
     "redis": "^5.8.2",
     "sequelize": "^6.37.7"
