--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sequelize-cli": "^6.6.3"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
