--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -33,6 +34,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.6",
+    "onnxruntime-node": "^1.23.2",
     "redis": "^5.8.2",
     "sequelize": "^6.37.7"
   }
