--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "face-api.js": "^0.22.2",
     "googleapis": "^166.0.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
