--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.6",
+    "ngrok": "^5.0.0-beta.2",
     "onnxruntime-node": "^1.23.2",
     "redis": "^5.8.2",
     "sequelize": "^6.37.7"
